--- a/55_Python_para_VFX_(Efeitos_Especiais).ipynb
+++ b/55_Python_para_VFX_(Efeitos_Especiais).ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNX+wSzN8Aib7uP8gNOfqD5",
+      "authorship_tag": "ABX9TyPdm2cYW9scIlJ2t6uO8DN4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -92,12 +92,131 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "imEZIo7uAYaB"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 211
+        },
+        "id": "imEZIo7uAYaB",
+        "outputId": "2f0f9e22-ce36-4919-f191-4ce616473df5"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'hou' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-1-0780a5208cf0>\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# exemplo de como visualizar todos os nós em uma cena\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mnos\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mhou\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'/'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mchild\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mnos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mchildren\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mchild\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'hou' is not defined"
+          ]
+        }
+      ],
+      "source": [
+        "# exemplo de como visualizar todos os nós em uma cena\n",
+        "nos = hou.node('/')\n",
+        "\n",
+        "for child in nos.children():\n",
+        "    print(child.name())"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# como visualizar o frame atual\n",
+        "hou.frame()\n",
+        "\n",
+        "# como limpar a sessão atual\n",
+        "hou.hipFile.clear()\n",
+        "\n",
+        "# selecionar o context OBJ\n",
+        "hou.node('/obj')\n",
+        "\n",
+        "# criar um node\n",
+        "carlos = hou.node('/obj').createNode(\"geo\")\n",
+        "\n",
+        "# acessando atributos do objeto\n",
+        "carlos.parm('tx')\n",
+        "\n",
+        "# checando o valor do atributo\n",
+        "carlos.parm('tx').eval()\n",
+        "\n",
+        "# alterando o valor do atributo\n",
+        "carlos.parm('tx').set(33)\n",
+        "carlos.parm('tx').eval()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 211
+        },
+        "id": "MQdhKxKzCbsE",
+        "outputId": "1e8860df-9dbc-4e89-9bd9-560f3c843677"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'hou' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-2-cfb8375e371c>\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# como visualizar o frame atual\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mhou\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mframe\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# como limpar a sessão atual\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mhou\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhipFile\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclear\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'hou' is not defined"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Criando uma SOP Network\n"
+      ],
+      "metadata": {
+        "id": "UXm4-EH4ClwK"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# construindo uma SOP Network\n",
+        "\n",
+        "hou.hipFile.clear()\n",
+        "geo = hou.node('/obj').createNode('geo')\n",
+        "box = geo.createNode('box')\n",
+        "subd = geo.createNode('subdivide')\n",
+        "subd.parm('iterations').set(3)\n",
+        "subd.setFirstInput(box)\n",
+        "subd.moveToGoodPosition()\n",
+        "subd.setDisplayFlag(True)\n",
+        "subd.setRenderFlag(True)\n",
+        "subd.setCurrent(True, clear_all_selected=True)"
+      ],
+      "metadata": {
+        "id": "sXlpD9FLCkvk",
+        "outputId": "5184a1e0-80c3-47b9-e1d9-4359d76df485",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 211
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'hou' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-3-d4e035a92d58>\u001b[0m in \u001b[0;36m<cell line: 3>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# construindo uma SOP Network\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mhou\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhipFile\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclear\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mgeo\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mhou\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'/obj'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcreateNode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'geo'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mbox\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgeo\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcreateNode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'box'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'hou' is not defined"
+          ]
+        }
+      ]
     }
   ]
 }
