--- a/57_[EDS]_Music_Generation.ipynb
+++ b/57_[EDS]_Music_Generation.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOWmsO1g3Syy9AXdhmabV71",
+      "authorship_tag": "ABX9TyPuDqSoZ011+bcWCzJstNwc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -76,6 +76,141 @@
       "metadata": {
         "id": "HHd7jPOtHcWl"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 2.1 Dependencies\n",
+        "First, let's download the course repository, install dependencies, and import the relevant packages we'll need for this lab."
+      ],
+      "metadata": {
+        "id": "bNKfIjGYHhKk"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Import Tensorflow 2.0\n",
+        "%tensorflow_version 2.x\n",
+        "import tensorflow as tf\n",
+        "\n",
+        "# Download and import the MIT 6.S191 package\n",
+        "!pip install mitdeeplearning\n",
+        "import mitdeeplearning as mdl\n",
+        "\n",
+        "# Import all remaining packages\n",
+        "import numpy as np\n",
+        "import os\n",
+        "import time\n",
+        "import functools\n",
+        "from IPython import display as ipythondisplay\n",
+        "from tqdm import tqdm\n",
+        "!apt-get install abcmidi timidity > /dev/null 2>&1\n",
+        "\n",
+        "# Check that we are using a GPU, if not switch runtimes\n",
+        "#   using Runtime > Change Runtime Type > GPU\n",
+        "assert len(tf.config.list_physical_devices('GPU')) > 0"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 488
+        },
+        "id": "xZ35T-CfHj6V",
+        "outputId": "d4fa6982-3876-40fa-df26-3abdfd7999db"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Colab only includes TensorFlow 2.x; %tensorflow_version has no effect.\n",
+            "Collecting mitdeeplearning\n",
+            "  Downloading mitdeeplearning-0.6.1.tar.gz (2.1 MB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.1/2.1 MB\u001b[0m \u001b[31m15.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "Requirement already satisfied: numpy in /usr/local/lib/python3.10/dist-packages (from mitdeeplearning) (1.25.2)\n",
+            "Requirement already satisfied: regex in /usr/local/lib/python3.10/dist-packages (from mitdeeplearning) (2023.12.25)\n",
+            "Requirement already satisfied: tqdm in /usr/local/lib/python3.10/dist-packages (from mitdeeplearning) (4.66.2)\n",
+            "Requirement already satisfied: gym in /usr/local/lib/python3.10/dist-packages (from mitdeeplearning) (0.25.2)\n",
+            "Requirement already satisfied: cloudpickle>=1.2.0 in /usr/local/lib/python3.10/dist-packages (from gym->mitdeeplearning) (2.2.1)\n",
+            "Requirement already satisfied: gym-notices>=0.0.4 in /usr/local/lib/python3.10/dist-packages (from gym->mitdeeplearning) (0.0.8)\n",
+            "Building wheels for collected packages: mitdeeplearning\n",
+            "  Building wheel for mitdeeplearning (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Created wheel for mitdeeplearning: filename=mitdeeplearning-0.6.1-py3-none-any.whl size=2118512 sha256=120f05cc1967dd21868e4073abc5740a42ed95263f4c8d085ab953e77ada40be\n",
+            "  Stored in directory: /root/.cache/pip/wheels/a1/67/db/909c55e80ce7fc2a8dbe1bbff0e591a69d12d11136b4cfe34c\n",
+            "Successfully built mitdeeplearning\n",
+            "Installing collected packages: mitdeeplearning\n",
+            "Successfully installed mitdeeplearning-0.6.1\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "AssertionError",
+          "evalue": "",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-2-179e1be307a8>\u001b[0m in \u001b[0;36m<cell line: 20>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;31m# Check that we are using a GPU, if not switch runtimes\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0;31m#   using Runtime > Change Runtime Type > GPU\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m \u001b[0;32massert\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconfig\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlist_physical_devices\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'GPU'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mAssertionError\u001b[0m: "
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 2.2 Dataset\n",
+        "\n",
+        "![Let's Dance!](http://33.media.tumblr.com/3d223954ad0a77f4e98a7b87136aa395/tumblr_nlct5lFVbF1qhu7oio1_500.gif)\n",
+        "\n",
+        "We've gathered a dataset of thousands of Irish folk songs, represented in the ABC notation. Let's download the dataset and inspect it:\n"
+      ],
+      "metadata": {
+        "id": "3B-XIwbxIYBc"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Download the dataset\n",
+        "songs = mdl.lab1.load_training_data()\n",
+        "\n",
+        "# Print one of the songs to inspect it in greater detail!\n",
+        "example_song = songs[0]\n",
+        "print(\"\\nExample song: \")\n",
+        "print(example_song)"
+      ],
+      "metadata": {
+        "id": "Q-JnJqtSIcFE",
+        "outputId": "5259c1dd-b1de-4d5a-aa50-5a02e975416f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Found 817 songs in text\n",
+            "\n",
+            "Example song: \n",
+            "X:1\n",
+            "T:Alexander's\n",
+            "Z: id:dc-hornpipe-1\n",
+            "M:C|\n",
+            "L:1/8\n",
+            "K:D Major\n",
+            "(3ABc|dAFA DFAd|fdcd FAdf|gfge fefd|(3efe (3dcB A2 (3ABc|!\n",
+            "dAFA DFAd|fdcd FAdf|gfge fefd|(3efe dc d2:|!\n",
+            "AG|FAdA FAdA|GBdB GBdB|Acec Acec|dfaf gecA|!\n",
+            "FAdA FAdA|GBdB GBdB|Aceg fefd|(3efe dc d2:|!\n"
+          ]
+        }
+      ]
     }
   ]
 }
