--- a/58_TensorFlow.ipynb
+++ b/58_TensorFlow.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNBInTlZsctNlVY7kmCwkZK",
+      "authorship_tag": "ABX9TyMFPR0S9bdzyYalZrW5mYL7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -107,12 +107,117 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "qou5sR5ZTyRs"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qou5sR5ZTyRs",
+        "outputId": "c1a470a2-c8a0-42a7-941d-e7727827a8f4"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Colab only includes TensorFlow 2.x; %tensorflow_version has no effect.\n"
+          ]
+        }
+      ],
+      "source": [
+        "# importar as bibliotecas necessárias\n",
+        "%tensorflow_version 2.x\n",
+        "import tensorflow as tf\n",
+        "from tensorflow import keras\n",
+        "import matplotlib.pyplot as plt\n",
+        "import pandas as pd\n",
+        "import numpy as np"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# carregar os dados do Fashion MNIST\n",
+        "(X_train_orig, y_train), (X_test, y_test) = keras.datasets.fashion_mnist.load_data()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2425-x9WUUn8",
+        "outputId": "254e4b9a-ed05-4ac9-ee0f-c4a647f7d91c"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/train-labels-idx1-ubyte.gz\n",
+            "29515/29515 [==============================] - 0s 0us/step\n",
+            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/train-images-idx3-ubyte.gz\n",
+            "26421880/26421880 [==============================] - 0s 0us/step\n",
+            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/t10k-labels-idx1-ubyte.gz\n",
+            "5148/5148 [==============================] - 0s 0us/step\n",
+            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/t10k-images-idx3-ubyte.gz\n",
+            "4422102/4422102 [==============================] - 0s 0us/step\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# ver dimensionalidade\n",
+        "print(\"X_train:\\t\", X_train_orig.shape)\n",
+        "print(\"y_train:\\t\", y_train.shape)\n",
+        "print(\"X_test:\\t\\t\", X_test.shape)\n",
+        "print(\"y_test:\\t\\t\", y_test.shape)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nbZ6lB42UXZS",
+        "outputId": "8a611949-2aad-46bd-91d7-b69fe1363193"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "X_train:\t (60000, 28, 28)\n",
+            "y_train:\t (60000,)\n",
+            "X_test:\t\t (10000, 28, 28)\n",
+            "y_test:\t\t (10000,)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Como usaremos um algoritmo de otimização baseado em gradiente, é preciso padronizar os pixels, o que é feito diretamente ao se dividir por 255.0. Ressalta-se que tal operação já transforma os `int` em `float`.\n",
+        "\n",
+        "Como o *FASHION MNIST* não possui dados de validação, irei pegar 10% dos valores com essa finalidade."
+      ],
+      "metadata": {
+        "id": "22sQ3wZ-UaPi"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# padronizar o dataset de treino e criar um de validação\n",
+        "X_valid, X_train = X_train_orig[:6000] / 255.0, X_train_orig[6000:] / 255.0\n",
+        "y_valid, y_train = y_train[:6000], y_train[6000:]"
+      ],
+      "metadata": {
+        "id": "0Z362EaCUoCK"
+      },
+      "execution_count": 4,
+      "outputs": []
     }
   ]
 }
