--- a/58_TensorFlow.ipynb
+++ b/58_TensorFlow.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPZTf2sZnvlGKGM+XiG3LrN",
+      "authorship_tag": "ABX9TyP3GwYjFTYC51C1RHiSOvSm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -407,6 +407,56 @@
         "id": "MFrvMTGJVCto"
       },
       "execution_count": 11,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# ver um resumo da rede\n",
+        "model.summary()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NaRW_ybMWB_5",
+        "outputId": "e1986a54-d392-493e-8556-dd3792d7afac"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Model: \"sequential\"\n",
+            "_________________________________________________________________\n",
+            " Layer (type)                Output Shape              Param #   \n",
+            "=================================================================\n",
+            " flatten (Flatten)           (None, 784)               0         \n",
+            "                                                                 \n",
+            " dense (Dense)               (None, 784)               615440    \n",
+            "                                                                 \n",
+            " dense_1 (Dense)             (None, 10)                7850      \n",
+            "                                                                 \n",
+            "=================================================================\n",
+            "Total params: 623290 (2.38 MB)\n",
+            "Trainable params: 623290 (2.38 MB)\n",
+            "Non-trainable params: 0 (0.00 Byte)\n",
+            "_________________________________________________________________\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# atribuir uma camada a uma variável\n",
+        "camada1 = model.layers[1]"
+      ],
+      "metadata": {
+        "id": "G1O8rq0eWEbf"
+      },
+      "execution_count": 13,
       "outputs": []
     }
   ]
