--- a/59_Aula_Inaugural_DSNP_Janeiro_de_2022.ipynb
+++ b/59_Aula_Inaugural_DSNP_Janeiro_de_2022.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOsK7Psu8hB9HJ+cM6x6w02",
+      "authorship_tag": "ABX9TyNEPLt5FVtvsnwTyhPAXG02",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -287,6 +287,61 @@
       ],
       "metadata": {
         "id": "B6UJIf_Yx8fV"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **Live DSNP 22/02**\n",
+        "\n",
+        "Chat da aula:\n",
+        "\n",
+        "00:31:57\tAndré Marinho:\topa\n",
+        "\n",
+        "00:39:19\tjoao:\tNão conhecia.\n",
+        "\n",
+        "00:40:01\tgabriel andre:\tTbm nao conhecia\n",
+        "\n",
+        "00:40:55\tranier:\tBoa noite Mestre. Eu também não conhecia. Brasil acima de tudo !!!\n",
+        "\n",
+        "00:44:16\tranier:\tJá foi disparado … GRUPO DE ESTUDOS\n",
+        "\n",
+        "MIT 6.S191\n",
+        "\n",
+        "Introduction to Deep Learning\n",
+        "\n",
+        "00:44:25\tjoao:\tEu recebi\n",
+        "\n",
+        "00:44:31\tranier:\tDias 23, e 24 de fevereiro\n",
+        "\n",
+        "Início: 21:30h\n",
+        "\n",
+        "Término: 22:30h\n",
+        "\n",
+        "00:44:35\tBianca Kaviski:\tTambém recebi\n",
+        "\n",
+        "00:45:28\tjoao:\tLegal\n",
+        "\n",
+        "00:46:04\tjoao:\tPode sim\n",
+        "\n",
+        "00:46:18\tBianca Kaviski:\tBeleza. Pode sim.\n",
+        "\n",
+        "00:46:19\tgabriel andre:\tPode sim\n",
+        "\n",
+        "00:46:30\tranier:\tCombinado…\n",
+        "\n",
+        "00:46:46\tgabriel andre:\tUma duvida\n",
+        "\n",
+        "00:47:50\tjoao:\tTambém comecei essa última turma de DSNP\n",
+        "\n",
+        "00:48:44\tjoao:\tObrigado, melhoras.\n",
+        "\n",
+        "00:48:58\tgabriel andre:\tAbraço\n",
+        "\n",
+        "00:49:03\tThiago:\tAbs!"
+      ],
+      "metadata": {
+        "id": "BLtBc1qEywS1"
       }
     },
     {
