--- a/61_Revisões.ipynb
+++ b/61_Revisões.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP65HtKfuusdUx4jEXWD4ro",
+      "authorship_tag": "ABX9TyMxjf+K4VZ8u+gOQPg+lW9K",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -175,6 +175,127 @@
       ],
       "metadata": {
         "id": "UcQYo5xR1TYs"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **Live do dia 16/08/2021**\n",
+        "\n",
+        "Chat da aula:\n",
+        "\n",
+        "00:05:48\tAndré Marinho:\tsó eu to sentindo falta do Carlos no canto da tela nas aulas? kkkk\n",
+        "\n",
+        "00:06:52\tAndré Marinho:\tkkkkkkkkkk\n",
+        "\n",
+        "00:11:17\tRicardo Max:\tAcredito que a forma como vc conta a história dos dados, chega até ser mais importante do que a visualização deles\n",
+        "\n",
+        "00:11:43\tRicardo Max:\tTô aqui justamente pra saber isso\n",
+        "\n",
+        "00:11:59\tAndré Marinho:\taquela masterclass foi top. Uso DataWrapper até hoje kkkkk conheci o Flourish tb\n",
+        "\n",
+        "00:12:21\tRicardo Max:\tQue beleza heim kkk\n",
+        "\n",
+        "00:26:00\tJoao Moura:\tboa noite\n",
+        "\n",
+        "00:26:23\tLeonardo Porto Nazareth:\tCarlos, o link que vc ia copiar no chat não veio\n",
+        "\n",
+        "00:26:39\tCris Rodrigues:\teu sempre tento abrir a documentação pelo código e não consigo kkkk\n",
+        "\n",
+        "00:26:40\tJoao Moura:\teu não recebi...\n",
+        "\n",
+        "00:26:40\tRicardo Max:\tNão recebi nenhum deles\n",
+        "\n",
+        "00:26:40\tJunior:\tta sem áudio para mais alguém?\n",
+        "\n",
+        "00:26:40\tMisael:\tnão recebi\n",
+        "\n",
+        "00:26:42\tWeylane Dutra:\tNao\n",
+        "\n",
+        "00:26:42\tCris Rodrigues:\tnão recebi ahaha\n",
+        "\n",
+        "00:26:57\tCarlos Melo:\thttps://matplotlib.org/stable/tutorials/introductory/usage.html#sphx-glr-tutorials-introductory-usage-py\n",
+        "\n",
+        "00:27:03\tLeonardo Porto Nazareth:\tValeu\n",
+        "\n",
+        "00:27:09\tCarlos Melo:\thttps://matplotlib.org/stable/api/axes_api.html\n",
+        "\n",
+        "00:27:13\tMisael:\tsim\n",
+        "\n",
+        "00:29:09\tValmir Junior:\tEssa live irá ficar gravada?\n",
+        "\n",
+        "00:29:23\tValmir Junior:\tpreciso terminar ainda o meu primeiro projeto ainda\n",
+        "\n",
+        "00:29:49\tValmir Junior:\tEstou atrasado demais!!!1\n",
+        "\n",
+        "00:30:06\tCris Rodrigues:\tacabei de imprimir a imagem aqui\n",
+        "\n",
+        "00:30:20\tCris Rodrigues:\ttá pregada no mural do canvas ahaha\n",
+        "\n",
+        "00:45:56\tCris Rodrigues:\ttá sim ahaha\n",
+        "\n",
+        "00:46:06\tJorge Barros Medeiros:\tfaz falta po\n",
+        "\n",
+        "00:46:19\tJorge Barros Medeiros:\tAgora sim\n",
+        "\n",
+        "00:53:14\tCris Rodrigues:\tequilibrio\n",
+        "\n",
+        "00:54:24\tCris Rodrigues:\tmodelo demais\n",
+        "\n",
+        "01:04:39\tCris Rodrigues:\tadobe color wheel é maravilhoso\n",
+        "\n",
+        "01:07:12\tisrael ruiz:\ttop\n",
+        "\n",
+        "01:07:17\tMisael:\tFoi muito bom\n",
+        "\n",
+        "01:07:18\tPaulo Vitor:\tAula top demais!!\n",
+        "\n",
+        "01:07:30\tEduardo Bandeira:\tTop demais!\n",
+        "\n",
+        "01:07:31\tPaulo Vitor:\tInsights atrás de insights\n",
+        "\n",
+        "01:07:32\tCris Rodrigues:\tbom do livro \"design pra quem não é designer\" é que da pra qualquer um ter noção sem ter visto do assunto antes\n",
+        "\n",
+        "01:07:39\tPaulo César:\tBoa demais!\n",
+        "\n",
+        "01:08:03\tCris Rodrigues:\tAAAAEEEEEE\n",
+        "\n",
+        "01:08:09\tCris Rodrigues:\ttava ansiosa por esse módulo ahaha\n",
+        "\n",
+        "01:08:57\tMaria Alice:\tUfa, cheguei! Pelo menos pra dar boa noite! rsrs\n",
+        "\n",
+        "01:09:21\tCris Rodrigues:\te eu que nem comecei o segundo módulo?\n",
+        "\n",
+        "01:09:24\tCris Rodrigues:\trindo de nervoso\n",
+        "\n",
+        "01:10:10\tEduardo Bandeira:\tEstou com você Cris. hahah\n",
+        "\n",
+        "01:10:21\tivair bezerra:\tsuper dicas. tem um guia de quais gráficos plotar dependendo da análise, qtde de variáveis?\n",
+        "\n",
+        "01:10:32\tivair bezerra:\ttop\n",
+        "\n",
+        "01:10:34\tCris Rodrigues:\taí sim\n",
+        "\n",
+        "01:11:04\tPaulo César:\thehehe.....  tmj Cris, me inscrevi já na prorrogação .....\n",
+        "\n",
+        "01:11:09\tCris Rodrigues:\timagina\n",
+        "\n",
+        "01:12:35\tisrael ruiz:\tboa noite a todos!\n",
+        "\n",
+        "01:12:41\tCris Rodrigues:\tboa noiteeee\n",
+        "\n",
+        "01:12:42\tClaudia Ferro:\tBoa noite!\n",
+        "\n",
+        "01:12:43\tCris Rodrigues:\tobrigada\n",
+        "\n",
+        "01:12:46\tMaria Alice:\t👍🏼👏🏼\n",
+        "\n",
+        "01:12:48\tMisael:\tBoa noite!!\n",
+        "\n",
+        "01:12:49\tPaulo César:\tBoa noite!"
+      ],
+      "metadata": {
+        "id": "IGzVWJNH149D"
       }
     },
     {
