--- a/61_Revisões.ipynb
+++ b/61_Revisões.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMxjf+K4VZ8u+gOQPg+lW9K",
+      "authorship_tag": "ABX9TyNZarOf236k1GWz+ctfe9Ke",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -296,6 +296,358 @@
       ],
       "metadata": {
         "id": "IGzVWJNH149D"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **Live do dia 23/08/2021**\n",
+        "\n",
+        "Chat da aula:\n",
+        "\n",
+        "00:04:22\tEduardo P. Lima:\tBoa noite\n",
+        "\n",
+        "00:04:26\tJoão Lucas Gonçalves:\tBoaa noitee\n",
+        "\n",
+        "00:04:26\tMisael:\tBoa noite =-D\n",
+        "\n",
+        "00:04:29\tVinicius Boscoa:\tBoa noite\n",
+        "\n",
+        "00:04:31\tClaudia Ferro:\tBoa noite!\n",
+        "\n",
+        "00:04:35\tluizf:\tBoa noite!!!!\n",
+        "\n",
+        "00:04:35\tSamuel De Oliveira:\tBoa noite ❤\n",
+        "\n",
+        "00:04:38\tGuilherme dos Anjos:\tboa noite!!!!\n",
+        "\n",
+        "00:04:42\tANTONIO AGIZ DE SOUZA:\tboa noite\n",
+        "\n",
+        "00:10:52\tAroldo Rocha:\tnão\n",
+        "\n",
+        "00:10:55\tluizf:\tEstamos te ouvindo\n",
+        "\n",
+        "00:10:56\tAroldo Rocha:\tsim\n",
+        "\n",
+        "00:11:00\tThiago:\tNão ta mudo não\n",
+        "\n",
+        "00:11:00\tluizf:\tSim\n",
+        "\n",
+        "00:11:03\tluizf:\tTa de boa\n",
+        "\n",
+        "00:11:04\tluizf:\tkkk\n",
+        "\n",
+        "00:15:46\tJoviano Silveira:\te ai galera\n",
+        "\n",
+        "00:16:10\tJoviano Silveira:\tto preparando aula\n",
+        "\n",
+        "00:16:15\tJoviano Silveira:\te vou ouvir vc amigao\n",
+        "\n",
+        "00:16:16\tThales Ferraz:\testou a concluir o segundo ainda hehe\n",
+        "\n",
+        "00:18:45\tJoviano Silveira:\taqui é o melhor conteúdo de DS\n",
+        "\n",
+        "00:18:57\tJoviano Silveira:\tkkkkkkkkkkk\n",
+        "\n",
+        "00:19:08\tThiago:\tKkkkkk\n",
+        "\n",
+        "00:19:09\tMaria Alice:\tkkkkk\n",
+        "\n",
+        "00:19:14\tThiago:\tPartiu Brasília\n",
+        "\n",
+        "00:19:18\tThiago:\tCasamento na faixa\n",
+        "\n",
+        "00:19:20\tThiago:\t😂 😂\n",
+        "\n",
+        "00:20:04\tAndré Marinho:\tfaz um happy hour kkkk\n",
+        "\n",
+        "00:20:08\tJoviano Silveira:\t\"boia de grátis\"\n",
+        "\n",
+        "00:20:51\tANTONIO AGIZ:\tColoca os boletos na frente da tv que na hora vc se anima!!!\n",
+        "\n",
+        "00:21:18\tEduardo P. Lima:\tEu sou de natal hehehe\n",
+        "\n",
+        "00:21:22\tEduardo P. Lima:\tCamarões é show mesmo\n",
+        "\n",
+        "00:21:29\tANTONIO AGIZ:\tfarofa dagua\n",
+        "\n",
+        "00:21:38\tJoão Lucas Gonçalves:\tFalta só João Pessoa\n",
+        "\n",
+        "00:22:22\tAndré Marinho:\tCarlos, faz uma segunda edição de campeonato de memes nessa semana de recesso kkkkkk aí anima e diverte a galera\n",
+        "\n",
+        "00:22:28\tAndré Marinho:\tvalendo uma assinatura da EDS\n",
+        "\n",
+        "00:22:28\tAndré Marinho:\tkkk\n",
+        "\n",
+        "00:22:35\tAlexandre Oliveira:\tTô morando em Natal, porque estou trabalhando como Data Engineer, graças ao DSnP.\n",
+        "\n",
+        "00:22:35\tThales Ferraz:\tmds kkkkkkkkk\n",
+        "\n",
+        "00:23:07\tAndré Marinho:\testamos sentindo falta da Isabela!\n",
+        "\n",
+        "00:23:27\tJoviano Silveira:\taconteceu algo com ela?\n",
+        "\n",
+        "00:23:36\tJoão Lucas Gonçalves:\tDeixei de morar em natal para morar em São José dos campos\n",
+        "\n",
+        "00:23:56\tJoviano Silveira:\tboua\n",
+        "\n",
+        "00:24:02\tJoviano Silveira:\tpássaros evoluindo\n",
+        "\n",
+        "00:24:08\tMaria Alice:\tAh, que legal! Os filhos vão crescendo !!!\n",
+        "\n",
+        "00:24:20\tJoviano Silveira:\tse meu sócio morrer, já sei quem eu peço\n",
+        "\n",
+        "00:24:41\tJoviano Silveira:\tshow,\n",
+        "\n",
+        "00:26:17\tThales Ferraz:\tML 😍\n",
+        "\n",
+        "00:26:39\tJoviano Silveira:\te a feijoada ta engrossando\n",
+        "\n",
+        "00:26:48\tANTONIO AGIZ:\tSe surgir uma ideia com quem devo falar?\n",
+        "\n",
+        "00:26:58\tANTONIO AGIZ:\tok\n",
+        "\n",
+        "00:27:37\tthyago faveran:\tqual email pra liberar o novo curso ?\n",
+        "\n",
+        "00:27:53\tthyago faveran:\tok\n",
+        "\n",
+        "00:28:07\tThiago:\tAcho que sou eu hein\n",
+        "\n",
+        "00:28:11\tThiago:\t😂 😂\n",
+        "\n",
+        "00:28:32\tThiago:\tSe é da camiseta do sigmoidal sou eu\n",
+        "\n",
+        "00:28:41\tThiago:\t😂 😂\n",
+        "\n",
+        "00:29:33\tThiago:\tOqq é pra mandar pra ela?\n",
+        "\n",
+        "00:29:50\tThiago:\tAh tah blz\n",
+        "\n",
+        "00:30:28\tJoão Lucas Gonçalves:\tO melhor é chamado sigmoidal\n",
+        "\n",
+        "00:36:04\tJoviano Silveira:\tsegunda...\n",
+        "\n",
+        "00:36:28\tluizf:\tCarlos, to praticamente começando hj o curso! TA oda, mas to mega animado!\n",
+        "\n",
+        "00:37:16\tJoviano Silveira:\ttreino viciado é foda\n",
+        "\n",
+        "00:40:12\tHenrique Paes de Souza:\tsempre via no reddit ou twitter mas nunca entendi do que se tratava kkkk\n",
+        "\n",
+        "00:43:14\tThiago:\tCasamento afegão kkkk\n",
+        "\n",
+        "00:43:19\tThiago:\tOtimo exemplo\n",
+        "\n",
+        "00:43:22\tAndré Marinho:\tOFF: Ta ansioso para DUNA?\n",
+        "\n",
+        "00:43:35\tHenrique Paes de Souza:\tmuito interessante! finalmente escutei uns termos da faculdade na vida real kkkk obrigado!\n",
+        "\n",
+        "00:48:53\tAndré Marinho:\tJesus, LinkedIn ta ficando chato. As vezes parece um mundo paralelo. Já vi post copiado por 3 influencers na mesma semana, mudavam uma palavra ou outra\n",
+        "\n",
+        "00:49:57\tAndré Marinho:\tpessoal levou o T Chapéu muito a sério\n",
+        "\n",
+        "00:49:58\tAndré Marinho:\tkkkk\n",
+        "\n",
+        "00:50:00\tEric Costa:\tSou de RI e não me meto…. kkkk\n",
+        "\n",
+        "00:50:53\tEric Costa:\t👍\n",
+        "\n",
+        "00:50:53\tJoviano Silveira:\tbom passar uns minutos ao vivo com vc man\n",
+        "\n",
+        "00:51:04\tEric Costa:\tvdd\n",
+        "\n",
+        "00:51:23\tJoviano Silveira:\tessa liberação fracionada é top pra segurar os NETFLIX´s\n",
+        "\n",
+        "00:51:48\tluizf:\tCarlos, Vc é top! Joviano, vc é fera tbm :D\n",
+        "\n",
+        "00:51:48\tJoviano Silveira:\teu copiei esse método de vc\n",
+        "\n",
+        "00:51:52\tJoviano Silveira:\tisso funciona\n",
+        "\n",
+        "00:52:06\tJoviano Silveira:\texato\n",
+        "\n",
+        "00:52:29\tJoviano Silveira:\t2 ou 3 devoluções\n",
+        "\n",
+        "00:52:31\tJoviano Silveira:\tmas ok\n",
+        "\n",
+        "00:52:32\tJoviano Silveira:\thehhee\n",
+        "\n",
+        "00:52:40\tEric Costa:\tDa para segurar mais…. Tá difícil ficar On Time\n",
+        "\n",
+        "00:52:49\tEDILSON:\thate de si ti da renner\n",
+        "\n",
+        "00:52:49\tAndré Marinho:\tpessoal maratona curso só para ter o certificado\n",
+        "\n",
+        "00:52:53\tAndré Marinho:\tessa cultura tem que acabar\n",
+        "\n",
+        "00:52:53\tAndré Marinho:\tkkk\n",
+        "\n",
+        "00:52:59\tEric Costa:\tkkkkkkk\n",
+        "\n",
+        "00:53:10\tJoviano Silveira:\tabs amigos\n",
+        "\n",
+        "00:53:14\tEric Costa:\tabs\n",
+        "\n",
+        "00:53:20\tThiago Villani:\tvlw boa noite\n",
+        "\n",
+        "00:53:21\tJoão Lucas Gonçalves:\tvlww por tudoo carlos\n",
+        "\n",
+        "00:53:23\tJunior:\tvlw\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "mwLIf74R3EXd"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **Live do dia 30/08/2021**\n",
+        "\n",
+        "Chat da aula:\n",
+        "\n",
+        "00:06:37\tJoeliton Miotto:\tBoa noite!\n",
+        "\n",
+        "00:08:29\tANTONIO AGIZ:\tboA NOITE\n",
+        "\n",
+        "00:08:36\tANTONIO AGIZ:\tDESCULPE O ATRASO\n",
+        "\n",
+        "00:08:54\tANTONIO AGIZ:\tconheço este doc\n",
+        "\n",
+        "00:09:09\tANTONIO AGIZ:\tsim kkk\n",
+        "\n",
+        "00:09:19\tANTONIO AGIZ:\tobrigado\n",
+        "\n",
+        "00:10:18\tHeriton Arantes:\teu tenho empresa, filha, cachorro... e sei que não vou conseguir fazer no tempo proposto.\n",
+        "\n",
+        "00:10:26\tDan Idra:\tCarlos por favor posta as lives que a última lá é do dia 09/08 nem sabia que era pra mandar dicas de aprendizado D=\n",
+        "\n",
+        "00:10:38\tHeriton Arantes:\tentão, já comecei sabendo que não iria conseguir fazer toda semana 1 projeto\n",
+        "\n",
+        "00:10:50\tjoao lucas gonçalves:\ttô em dia até agora\n",
+        "\n",
+        "00:11:38\tHeriton Arantes:\testou conseguindo fazer 1 a cada 15 dias... como meu foco é aprender, e não arrumar emprego, to bem tranquilo.\n",
+        "\n",
+        "00:20:24\tJoeliton Miotto:\tParabéns pelo trabalho incrível... Antônio.\n",
+        "\n",
+        "00:21:05\tANTONIO AGIZ:\tobrigado\n",
+        "\n",
+        "00:21:35\tDan Idra:\tValeeeu\n",
+        "\n",
+        "00:21:39\tDan Idra:\tQuanto ao conteúdo faz parte do método ter que buscar por fora, tô terminando o segundo projeto, eu não acho que esteja jogado os conteúdos.\n",
+        "\n",
+        "00:22:54\tEdilson:\t😖😕\n",
+        "\n",
+        "00:23:07\tDan Idra:\tnão, é que mais cedo vc perguntou se estavamos perdidos, esqueci de apertar enter\n",
+        "\n",
+        "00:23:08\tDan Idra:\tokpeoekpoekpoe\n",
+        "\n",
+        "00:23:35\tSamuel De Oliveira:\tPra mim a ultima Live lá é do dia 09/08\n",
+        "\n",
+        "00:24:05\tSamuel De Oliveira:\tBlz\n",
+        "\n",
+        "00:24:29\tDiogo Bueno:\tDSNP 3.0 tá surreal, gratidão eterna!\n",
+        "\n",
+        "00:25:07\tANTONIO AGIZ:\tkkkk plano vitalício!!\n",
+        "\n",
+        "00:25:19\tOtávio Filpo:\tEu to com acesso de 5 anos kkk\n",
+        "\n",
+        "00:25:31\tOtávio Filpo:\tVou ter que apresentar um TCC quando acabar?\n",
+        "\n",
+        "00:25:33\tOtávio Filpo:\tkkkk\n",
+        "\n",
+        "00:25:54\tANTONIO AGIZ:\tigual a propaganda de óculos sua idade = anos!!! kkkk\n",
+        "\n",
+        "00:25:57\tDan Idra:\tEu lembro\n",
+        "\n",
+        "00:26:03\tDiogo Bueno:\tvou fazer 50 vídeos kkkkk\n",
+        "\n",
+        "00:26:17\tDan Idra:\tEu te lembro\n",
+        "\n",
+        "00:26:43\tAlmir Gouvea:\tConteúdo e bônus são fantásticos\n",
+        "\n",
+        "00:27:19\tAroldo Rocha:\tNeste sentido de trabalho voluntário, eu acredito que um trabalho interessante - e necessário - seria a estruturação de um conjunto de apresentações em escolas, com um foco prático, de aplicabilidade. Isso iria ajudar muito essa turminha que não sabe pra onde vai, não consegue ver sentido naquilo que está estudando, mesmo.\n",
+        "\n",
+        "00:27:41\tAroldo Rocha:\teu prentendo fazer isso com SIG\n",
+        "\n",
+        "00:29:25\tANTONIO AGIZ:\tAcho que depende do tipo de trabalho e para que tipo de grupo de pessoas, pois a realidade as vezes vc tem que dar o básico primeiro ( desde a parte de saneamento básico, etc) para depois chegar na programação, etc. Tem lugares no Brasil que não tem m=nem energia elétrica...\n",
+        "\n",
+        "00:30:16\tEdilson:\t💹\n",
+        "\n",
+        "00:32:03\tAlmir Gouvea:\tdesvalorizar: barulho\n",
+        "\n",
+        "00:32:05\tHeriton Arantes:\tfator esquina\n",
+        "\n",
+        "posição solar\n",
+        "\n",
+        "00:32:13\tHeriton Arantes:\tescola\n",
+        "\n",
+        "presidio\n",
+        "\n",
+        "00:32:13\tOtávio Filpo:\tUm prédio mais alto desvaloriza\n",
+        "\n",
+        "00:32:21\tSamuel De Oliveira:\tUm lixão\n",
+        "\n",
+        "00:32:21\tyago:\tfavela\n",
+        "\n",
+        "00:32:22\tAroldo Rocha:\tpenitenciária rsrsrs\n",
+        "\n",
+        "00:32:22\tJoao Moura:\tfarmácia proximo\n",
+        "\n",
+        "00:32:24\tOtávio Filpo:\tconstruído ao lado*\n",
+        "\n",
+        "00:32:28\tDiogo Romeo Rosanelli:\tServiços públicos na região ajudam a aumentar o valor. Excesso de crimes na região reduz\n",
+        "\n",
+        "00:32:28\tJoeliton Miotto:\tpresidio\n",
+        "\n",
+        "00:32:42\tHeriton Arantes:\tbiqueira\n",
+        "\n",
+        "00:32:42\tjoao lucas gonçalves:\tacademia\n",
+        "\n",
+        "00:32:44\tAroldo Rocha:\tinteligência espacial\n",
+        "\n",
+        "00:32:49\tJoeliton Miotto:\tpraia\n",
+        "\n",
+        "00:33:25\tANTONIO AGIZ:\ttransporte publico\n",
+        "\n",
+        "00:33:31\tAlmir Gouvea:\tescolas próximas valoriza\n",
+        "\n",
+        "00:33:32\tOtávio Filpo:\tSó com coordenada geográfica dá pra fazer um dataset inteiro kkkk\n",
+        "\n",
+        "00:33:35\tJoeliton Miotto:\tmontanha-casa de campo\n",
+        "\n",
+        "00:33:47\tAlmir Gouvea:\tinteressante\n",
+        "\n",
+        "00:37:45\tHeriton Arantes:\tno projeto do Airbnb, eu peguei o RJ, e tentei criar um dataset novo, com as coordenadas geográficas x IDH por bairro... mas ai acabei meio que desistindo\n",
+        "\n",
+        "00:39:33\tAroldo Rocha:\teu não ganhei nada\n",
+        "\n",
+        "00:39:35\tAroldo Rocha:\trsrsrsr\n",
+        "\n",
+        "00:42:33\tANTONIO AGIZ:\tcomecei a ler mas não terminei ainda...\n",
+        "\n",
+        "00:44:58\tJoao Moura:\tcalculo é uma coisa linda\n",
+        "\n",
+        "00:45:17\tANTONIO AGIZ:\tcalculo é tudo...\n",
+        "\n",
+        "00:45:18\tjoao lucas gonçalves:\ttive aula hoje de equações diferencias\n",
+        "\n",
+        "00:47:21\tCarlos Melo:\thttps://www.deeplearning.ai/programs/\n",
+        "\n",
+        "00:48:47\tyago:\ttive calculo 3 na faculdade tenho pesadelo ate hoje\n",
+        "\n",
+        "00:50:07\tJoao Moura:\tmelhor parte de calculo é sonhar com os cálculos\n",
+        "\n",
+        "00:50:12\tMaria Alice:\tchegando em casa agora\n",
+        "\n",
+        "00:50:39\tMaria Alice:\tkkk meu Deussss!!!\n",
+        "\n",
+        "00:51:31\tANTONIO AGIZ:\tkkkk\n",
+        "\n",
+        "00:52:32\tAlmir Gouvea:\tbons tempos então\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "GFrgHFx53lo7"
       }
     },
     {
